# node-bazel-docker-repro

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
