## WORKSPACE
workspace(name = "node_bazel_docker")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_js

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "aspect_rules_js",
    sha256 = "a949d56fed8fa0a8dd82a0a660acc949253a05b2b0c52a07e4034e27f11218f6",
    strip_prefix = "rules_js-1.33.1",
    url = "https://github.com/aspect-build/rules_js/releases/download/v1.33.1/rules_js-v1.33.1.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "DEFAULT_NODE_VERSION", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "nodejs",
    node_version = DEFAULT_NODE_VERSION,
)

# For convenience, npm_translate_lock does this call automatically.
# Uncomment if you don't call npm_translate_lock at all.
load("@bazel_features//:deps.bzl", "bazel_features_deps")

bazel_features_deps()

#load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")
#
#npm_translate_lock(
#    name = "npm",
#    pnpm_lock = "//:pnpm-lock.yaml",
#    verify_node_modules_ignored = "//:.bazelignore",
#)

#load("@npm//:repositories.bzl", "npm_repositories")
#npm_repositories()
